# tensorflow-cc-examples

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: compile-options.cmake  platform-detect.cmake  summary.cmake
data/: hello.txt
examples/: CMakeLists.txt
examples/1_Introduction/: CMakeLists.txt
examples/1_Introduction/src/: basic-graphdef.cc  basic-io.cc  basic-operations.cc  basic-tensors.cc  hello-world.cc  naming-ops.cc
